# rusty-fantasy

./: Cargo.toml
client/: Cargo.toml  Dioxus.toml
client/src/: main.rs
client/src/components/: chat.rs  client.rs  login_screen.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: hero.rs  lib.rs  limit.rs  messaging.rs  might.rs  modifier.rs  status.rs  tag.rs  theme.rs
