[package]
name = "rusty-fantasy"
version = "0.1.0"
authors = ["Ben Jones <fetiddius@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
gloo-net = { version = "0.6.0", features = ["websocket"] }
futures = "0.3"
shared = { path = "../shared" }
serde_json = "1.0.143"
tracing = "0.1.41"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
